boostlook.css
/* ... */
.boostlook .content div:has(> table) {
  overflow-x: auto;
}

.boostlook code,
.boostlook p code,
.boostlook li code,
.boostlook .doc p code,
.boostlook .doc table code,
.boostlook .doc .colist > table code {
  background: none;
  padding: 0;
  font-weight: 600;
  color: var(--bl-code-text-color) !important;
}

.boostlook .quoteblock,
.boostlook .verseblock {
  background: var(--bl-quote-background);
  border-left: 3px solid var(--bl-border-color);
  color: var(--bl-text-color);
}

.boostlook .quoteblock::before,
.boostlook .verseblock::before {
  color: var(--bl-quote-word-color);
}

.boostlook .tabpanel {
  background-color: var(--bl-tabpanel-background);
}

.boostlook .hljs-keyword,
.boostlook .hljs-selector-tag,
.boostlook .hljs-subst {
  color: var(--bl-hljs-keyword-color);
}

.boostlook .hljs-number {
  color: var(--bl-hljs-number-color);
}

.boostlook .hljs-doctag,
.boostlook .hljs-string {
  color: var(--bl-hljs-doctag-color);
}

.boostlook .hljs-section,
.boostlook .hljs-selector-id,
.boostlook .hljs-title {
  color: var(--bl-hljs-section-color);
}

.boostlook p a:visited,
.boostlook table a,
.boostlook .pagination a {
  color: var(--bl-link-color);
}

.boostlook .hljs-attribute,
.boostlook .hljs-name,
.boostlook .hljs-tag {
  color: var(--bl-hljs-attribute-color);
}

.boostlook nav.pagination span::before {
  color: var(--bl-pagination-color);
}

.boostlook #toc a {
  color: var(--bl-nav-link-color);
}

.boostlook #toc a:hover,
.boostlook #toc a:focus {
  color: var(--bl-nav-link-hover-color);
}

.boostlook #toc.toc2 {
  padding-bottom: 1.5rem;
}

.boostlook b,
.boostlook strong {
  font-weight: bold;
}

.boostlook #header,
.boostlook #content,
.boostlook #footer {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.boostlook #header {
  padding-top: 1.25rem;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
}

.boostlook #content {
  padding-top: 1.25rem;
  overflow-y: auto;
}

.boostlook #footer {
  padding-bottom: 1.25rem;
  border-bottom-left-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.boostlook h2:first-of-type {
  margin-top: 0;
}

/*----------------- Global Styles for .boostlook end -----------------*/

/*----------------- Styles specific to AsciiDoctor content start -----------------*/

.article.toc2.toc-left {
  min-height: 100vh;
  max-width: 80rem;
  margin-left: auto;
  margin-right: auto;
  background-color: var(--bl-pasteboard-color);
  position: relative;
}

.boostlook:not(:has(.doc)) pre {
  font-family: "Noto Sans Mono", monospace;
  background-color: var(--bl-pre-background);
  margin-bottom: 1.25rem;
  padding: 1rem;
  overflow-x: auto;
  border-radius: 8px;
}

.boostlook:not(:has(.doc)) div.highlight {
  border-radius: 8px;
}

.boostlook:not(:has(.doc)) table {
  border-collapse: collapse;
  margin: 1em;
  border: 1px solid var(--bl-table-border-color);
}

.boostlook:not(:has(.doc)) th {
  background-color: var(--bl-table-head-background);
  text-align: left;
  padding: 0.25em 0.55em;
  font-weight: 550;
}

.boostlook:not(:has(.doc)) td {
  border: 1px solid var(--bl-table-border-color);
  padding: 0.25em 0.55em;
}

.boostlook #header > h1 {
  margin-top: 0;
}

.boostlook #toc > ul.sectlevel1 {
  padding-left: 0;
}

.boostlook #toc ul {
  margin: 0;
  padding: 0 0 0 0.8rem;
  line-height: 1.725;
  font-size: 1rem;
  list-style: none;
}

.boostlook #toc .sectlevel1 > li > a {
  font-weight: bolder;
}

.boostlook #toc #toctitle {
  font-size: 1.5rem;
}

.boostlook #toc.toc2,
.boostlook #header:not(:has(.nav-container)),
.boostlook #content,
.boostlook #footer {
  background-color: var(--bl-card-background-color);
}

.boostlook #toc.toc2,
.boostlook #toc.toc2.nav-container {
  overflow-y: auto;
}

.boostlook #toc.toc2 {
  position: static;
}

.boostlook #toc.toc2 > ul {
  padding-bottom: 2rem;
  box-sizing: border-box;
  position: relative;
  z-index: 0;
}

.boostlook #toggle-toc {
  visibility: hidden;
  height: 0;
  width: 0;
}

.boostlook #toc .nav-menu > .nav-list,
.boostlook #toc .nav-menu > .nav-list > .nav-list {
  padding-left: 0
}

.boostlook .nav-menu .title {
  border-bottom: 1px solid var(--bl-table-border-color);
  margin-bottom: 16px;
}

.boostlook #content .sect3:has(.tableblock) {
  overflow-x: auto;
}

.boostlook .title {
  font-weight: bolder;
  margin-bottom: 0.5rem;
}

.boostlook pre.rouge .o {
  font-weight: normal;
}

.boostlook pre.rouge code span {
  font-style: normal;
}

@media screen and (min-width: 768px) {
  .boostlook #toggle-toc {
    visibility: visible;
    height: auto;
    width: auto;
  }

  .article.toc2.toc-left {
    padding: 1rem 1rem 0 1rem;
  }

  .boostlook #toc.toc2 {
    border-radius: 0.5rem;
  }

  .boostlook #toc.toc2 {
    position: fixed;
    width: 17rem;
    left: max(1rem, 50% - 39rem);
    top: 1rem;
    z-index: 1000;
    height: calc(100vh - 1rem);
    padding: 1rem;
    padding: 1rem 1rem 1.5rem;
    overflow-x: hidden;
    overflow-y: auto;
  }

  .boostlook {
    margin-left: 18rem;
  }

  .boostlook#libraryReadMe {
     margin-left: 0;
  }

  .boostlook #toggle-toc {
    position: fixed;
    top: 2rem;
    left: max(1rem, 50% - 39rem - 1rem);
    background-color: rgb(255, 255, 255, 0.5);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
    border: 0;
    padding: 0;
    cursor: pointer;
    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%2224px%22%20viewBox%3D%220%20-960%20960%20960%22%20width%3D%2224px%22%20fill%3D%22%235f6368%22%3E%3Cpath%20d%3D%22M400-240l240-240-240-240-56%2056%20184%20184-184%20184%2056%2056Z%22%2F%3E%3C%2Fsvg%3E");
    background-repeat: no-repeat;
    background-position: center;
    border-radius: 1rem;
    height: 2rem;
    width: 2rem;
    text-indent: -9999px;
    z-index: 1001;
  }
}
/* ... */

